--- a/src/components/Chat/Message.scss
+++ b/src/components/Chat/Message.scss
@@ -13,11 +13,24 @@
 
 .message {
   border: 1px solid gray;
-  padding: 1rem;
   border-radius: 1rem 1rem 1rem 0;
-  width: 80%;
+  overflow-wrap: break-word;
+  width: max-content;
+  max-width: clamp(200px, 70vw, 400px);
 
   &.own {
     border-radius: 1rem 1rem 0 1rem;
   }
+}
+
+.time {
+  color: #7b7b82;
+  font-size: 8px;
+  display: flex;
+  justify-content: flex-end;
+  padding: 0.2rem 0.6rem 0.1rem 1rem;
+}
+
+.message-content {
+  padding: 0.5rem 1rem 0.1rem 1rem;
 }
