--- a/src/pages/chats/ChatList.scss
+++ b/src/pages/chats/ChatList.scss
@@ -1,5 +1,3 @@
-//@use "../../sass_vars/global-vars.scss" as *;
-
 @use "../../sass_vars/global-vars.scss" as *;
 
 .chats {
@@ -8,5 +6,11 @@
 
   @media (max-width: 500px) {
     width: 100%;
+  }
+
+  @include btn-styling;
+
+  .button {
+    margin-left: 1rem;
   }
 }
