--- a/src/pages/search-results/SearchResults.scss
+++ b/src/pages/search-results/SearchResults.scss
@@ -2,7 +2,7 @@
 
 .search-results {
   @include post-border-margin-padding;
-  margin-top: 1rem;
+  margin: 1rem 0;
   padding: 1rem;
   height: max-content;
 
