Remove last-of-type styling because it did not affect anything and set margin top to 0 for the first element in the list

--- a/src/pages/search-results/SearchResults.scss
+++ b/src/pages/search-results/SearchResults.scss
@@ -12,8 +12,8 @@
     align-items: center;
     gap: 1rem;
 
-    &:not(:last-of-type) {
-      margin-bottom: 1rem;
+    &:first-of-type {
+      margin-top: 0;
     }
 
     .user-image img {
