Add css class 'notification-sender'
The css class is added to span that shows who sent the message

In the css, define the width of the notification-sender

Remove the width of the 'notification' css class as it is no longer
needed

Add 'right: 1rem' property to search-drop-down css class to assure that
it is always 1rem from the right side of the screen

--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -263,6 +263,7 @@
   position: absolute;
   display: none;
   top: 50px;
+  right: 1rem;
   background-color: $post-bg-color;
   border-radius: $post-border-radius;
 
@@ -287,7 +288,10 @@
     display: flex;
     align-items: center;
     gap: 2rem;
-    width: clamp(150px, 50vw, 400px);
+
+    .notification-sender {
+      width: clamp(130px, 25vw, 250px);
+    }
   }
 
   .notification-message {
