Add navigation to search icon when clicked
Justify search icon to the left

Every time search name changes, clear the results in useNextQuery

In the SearchResults component page, create a search state and use it
for searching users

Sdd a media query and when the page becomes 478px or smaller,
display an input to search for users

Also add css stylings to the input

--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -70,7 +70,7 @@
       flex-grow: 5;
       display: flex;
       align-items: center;
-      justify-content: center;
+      justify-content: left;
       position: relative;
       height: 50px;
 
@@ -107,7 +107,6 @@
       }
 
       #search-bar-drop-down {
-        border-color: red;
         left: 0;
         right: initial;
       }
