--- a/src/pages/search-results/SearchResults.scss
+++ b/src/pages/search-results/SearchResults.scss
@@ -6,6 +6,18 @@
   padding: 1rem;
   height: max-content;
 
+  .search-input {
+    margin-bottom: 1rem;
+    padding: 0.5rem 1rem;
+    appearance: none;
+    border: none;
+    border-radius: 30px;
+    background-color: $input-bg-color;
+    color: white;
+    width: 100%;
+    outline: none;
+  }
+
   .search-results-names {
     @include post-border-margin-padding;
     display: flex;
