Add variousNotifications drop down to Topbar component
in the AuthReducer, add a case for clearing various notifications

in the css styles, add navigate-user css class to style the user's name
who sent the notification. This styling signals that the user's name is
clickable

--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -301,7 +301,7 @@
   .notification {
     display: flex;
     align-items: center;
-    gap: 2rem;
+    gap: 1rem;
 
     .notification-sender {
       width: clamp(130px, 25vw, 250px);
@@ -338,4 +338,10 @@
 
 .hamburger {
   margin-left: 8px;
+}
+
+.navigate-user {
+  cursor: pointer;
+  font-weight: 900;
+  color: #8a8a8a;
 }
