Create a LikerList and a LikerListModal
When a user hovers over the like button, a tooltip appears showing how
many users liked the post. By clicking on the tooltip, a modal appears
with the list of all the users that had liked this post

--- a/src/components/Feed/Timeline/Post.scss
+++ b/src/components/Feed/Timeline/Post.scss
@@ -1,6 +1,7 @@
 @use "../../../sass_vars/global-vars" as *;
 
 .post {
+  position: relative;
   @include post-border-margin-padding;
 
   .delete-icon-container {
@@ -46,7 +47,7 @@
   }
 
   .post-footer {
-    margin-top: 1rem;
+    margin-top: 0.5rem;
     display: flex;
 
     .icon-wrapper {
