--- a/src/components/Feed/Timeline/Subscriptions.scss
+++ b/src/components/Feed/Timeline/Subscriptions.scss
@@ -2,20 +2,50 @@
 
 .subs {
   @include post-border-margin-padding;
-
-  height: 300px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: min-content;
+  padding: 0;
   // position: sticky;
   // top: calc(50px + 1rem);
+
   h4 {
-    margin-bottom: 1rem;
+    padding-top: 0.5rem;
+    margin: 0.3rem 0.5rem 0.3rem;
   }
 
   .sub-image {
-    padding: 0.3rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    padding: 0.5rem 1.5rem;
+    transition: all 0.25s ease-in;
+    width: 100px;
 
     img {
-      @include image-styling($height: 50px, $width: 50px);
-      cursor: pointer;
+      @include image-styling($height: 40px, $width: 40px);
+    }
+
+    &:hover {
+      background-color: $button-highlight-color;
+    }
+  }
+
+  .sub-user-name {
+    margin-top: 0.5rem;
+  }
+
+  .view-all {
+    padding: 1rem 0rem;
+    width: 100%;
+    text-align: center;
+    border-radius: 0 0 $post-border-radius $post-border-radius;
+    transition: all 0.25s ease-in;
+
+    &:hover {
+      background-color: $button-highlight-color;
     }
   }
 }
