--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -278,7 +278,7 @@
   right: 1rem;
   background-color: $post-bg-color;
   border-radius: $post-border-radius;
-  height: 250px;
+  max-height: 250px;
   overflow-y: scroll;
   border: 1px solid $post-border-color;
 
@@ -322,7 +322,7 @@
     margin-top: 0.5rem;
     overflow: hidden;
     text-overflow: ellipsis;
-    width: clamp(240px, 38vw, 350px);
+    width: clamp(210px, 34vw, 330px);
   }
 }
 
