--- a/src/components/Chat/Message.scss
+++ b/src/components/Chat/Message.scss
@@ -1,10 +1,14 @@
 .message-container {
   display: flex;
   flex-wrap: wrap;
-  margin-bottom: 1rem;
+  margin-top: 1rem;
   // &:not(:last-of-type) {
   //   margin-bottom: 1rem;
   // }
+
+  &:first-of-type {
+    margin-bottom: 1rem;
+  }
 
   &.own {
     justify-content: flex-end;
