--- a/src/components/Feed/Timeline/Header.scss
+++ b/src/components/Feed/Timeline/Header.scss
@@ -59,6 +59,8 @@
       padding: 0.3rem 1rem;
       border-radius: 15px;
       cursor: pointer;
+      width: 80px;
+      height: 30px;
       transition: all 0.3s ease-in;
     }
 
