Update top property of the drop down

--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -227,7 +227,7 @@
       .drop-down {
         display: none;
         position: absolute;
-        top: calc(50px + 1rem);
+        top: 50px;
         right: 0.5rem;
 
         ul {
