--- a/src/components/Feed/Timeline/Post.scss
+++ b/src/components/Feed/Timeline/Post.scss
@@ -18,11 +18,18 @@
     @include post-display;
     img {
       @include image-styling($width: 40px, $height: 40px);
+      cursor: pointer;
     }
 
     .post-info {
       .username {
         font-weight: 700;
+        transition: all 0.35s ease-in;
+
+        &:hover {
+          text-decoration: underline;
+          cursor: pointer;
+        }
       }
       .post-date {
         font-weight: 200;
