--- a/src/components/Feed/Timeline/NewPost.scss
+++ b/src/components/Feed/Timeline/NewPost.scss
@@ -7,18 +7,61 @@
     @include image-styling($width: 50px, $height: 50px);
   }
 
-  input {
+  #new-post-input {
     width: 80%;
-    margin: 1rem;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid $post-border-color;
-    outline: none;
-    color: white;
-    padding: 0.3rem;
+
+    input {
+      width: 100%;
+      margin: 1rem;
+      background-color: transparent;
+      border: none;
+      border-bottom: 1px solid $post-border-color;
+      outline: none;
+      color: white;
+      padding: 0.3rem;
+    }
   }
 
   .new-post-send-icon {
     cursor: pointer;
+    margin-left: 1.5rem;
+  }
+
+  .tag-drop-down {
+    top: 150px;
+    position: absolute;
+    margin-left: 1rem;
+    background-color: $post-bg-color;
+    border-radius: $post-border-radius;
+    max-height: 250px;
+    overflow-y: scroll;
+    border: 1px solid $post-border-color;
+    z-index: 999;
+    display: none;
+
+    ul {
+      background-color: $post-bg-color;
+    }
+
+    li {
+      list-style: none;
+      padding: 1rem 1.5rem;
+      color: $button-text-color;
+      cursor: pointer;
+
+      &:not(:last-child) {
+        border-bottom: 1px solid $post-border-color;
+      }
+    }
+
+    .show {
+      display: block;
+    }
+  }
+
+  #tagged-user {
+    background-color: #7a7b7a;
+    padding: 0.3rem;
+    border-radius: 7px;
   }
 }
