--- a/src/components/Login/Login.scss
+++ b/src/components/Login/Login.scss
@@ -23,6 +23,9 @@
   }
 
   .login-form {
+    max-width: 400px;
+    margin: auto;
+
     & > *:first-child {
       margin-top: 1rem;
     }
@@ -30,7 +33,8 @@
     & input,
     & button {
       display: block;
-      width: 80%;
+      width: 100%;
+
       height: 40px;
       margin: 0 auto 1rem;
       padding: 0.6rem 1.2rem;
@@ -47,13 +51,13 @@
 
     .password-container {
       position: relative;
-      margin-bottom: 4rem;
+      margin-bottom: 2rem;
 
       .visibility-icon {
         position: absolute;
         color: white;
         top: 10px;
-        right: 15%;
+        right: 5%;
 
         & * {
           font-size: 18px;
