--- a/src/components/Feed/Timeline/NewPost.scss
+++ b/src/components/Feed/Timeline/NewPost.scss
@@ -7,6 +7,7 @@
 
 #new-post-input {
   display: flex;
+  align-items: center;
 
   img {
     @include image-styling($width: 50px, $height: 50px);
@@ -14,7 +15,7 @@
 
   input {
     width: 100%;
-    margin: 1rem;
+    margin: 0.5rem;
     background-color: transparent;
     border: none;
     border-bottom: 1px solid $post-border-color;
