--- a/src/style.css
+++ b/src/style.css
@@ -13,6 +13,14 @@ body {
   margin-left: 0.5rem;
 }
 
+.margin-right {
+  margin-right: 0.5rem;
+}
+
+.margin-top {
+  margin-top: 1rem;
+}
+
 .home-children-section {
   transition: margin 0.2s ease-in;
 }
