--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -2,8 +2,71 @@
 
 .comment {
   margin-top: 1rem;
+  display: flex;
+  gap: 1rem;
+
+  .comment-content {
+    flex-grow: 1;
+  }
 
   img {
     @include image-styling($width: 30px, $height: 30px);
+  }
+
+  .comment-text {
+    margin-top: 0.3rem;
+    margin-left: 0.2rem;
+  }
+
+  @include input-style;
+
+  @include btn-styling;
+
+  @include btn-disabled;
+
+  .edit-buttons {
+    display: flex;
+    gap: 0.5rem;
+    margin-top: 0.5rem;
+    justify-content: flex-end;
+  }
+
+  .vert-icon-container {
+    position: relative;
+    display: flex;
+    align-items: center;
+
+    .vert-icon {
+      font-size: 18px;
+      cursor: pointer;
+    }
+
+    .comment-drop-down {
+      position: absolute;
+      top: 30px;
+      right: -15px;
+      z-index: 999;
+
+      ul li {
+        list-style: none;
+        background-color: $post-bg-color;
+        border: 1px solid $post-border-color;
+        padding: 0.6rem 0.4rem;
+        text-align: center;
+        cursor: pointer;
+        transition: all 0.3s ease-in;
+
+        &:hover {
+          background-color: $button-highlight-color;
+        }
+
+        &:first-of-type {
+          border-radius: 12px 12px 0 0;
+        }
+        &:last-of-type {
+          border-radius: 0 0 12px 12px;
+        }
+      }
+    }
   }
 }
