--- a/src/components/Feed/Timeline/NewPost.scss
+++ b/src/components/Feed/Timeline/NewPost.scss
@@ -11,21 +11,14 @@
 
   img {
     @include image-styling($width: 50px, $height: 50px);
+    margin-right: 0.5rem;
   }
 
-  input {
-    width: 100%;
-    margin: 0.5rem;
-    background-color: transparent;
-    border: none;
-    border-bottom: 1px solid $post-border-color;
-    outline: none;
-    color: white;
-    padding: 0.3rem;
-  }
+  @include input-style;
 }
 
 .new-post-send-icon {
+  margin-left: 0.5rem;
   cursor: pointer;
   align-self: center;
 }
