Write a reducer for updating likes/dislikes
Define a state for likes/dislikes

Define and a function for liking/disliking, import likeDislikeComment
and use it to like/dislike a comment

Align thumbs and like/dislike counters vertically in the center in
Comment.scss

--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -76,6 +76,11 @@
     align-items: center;
     gap: 0.3rem;
 
+    .thumb {
+      display: flex;
+      align-items: center;
+    }
+
     .icon {
       cursor: pointer;
       padding: 0.3rem;
