--- a/src/components/Comment/Comment.scss
+++ b/src/components/Comment/Comment.scss
@@ -5,8 +5,20 @@
   display: flex;
   gap: 1rem;
 
-  .comment-content {
+  #comment-info-wrapper {
+    display: grid;
     flex-grow: 1;
+    width: 100%;
+
+    #comment-info {
+      display: grid;
+      grid-template-columns: 1fr min-content;
+      grid-template-rows: 1fr 1fr;
+    }
+
+    #comment-content {
+      grid-row: 1/3;
+    }
   }
 
   img {
@@ -22,7 +34,7 @@
 
   @include btn-disabled;
 
-  .vert-icon-container {
+  #vert-icon-container {
     display: flex;
     align-items: center;
 
@@ -74,15 +86,25 @@
       display: flex;
       align-items: center;
     }
+  }
 
-    .icon {
-      cursor: pointer;
-      padding: 0.3rem;
-      border-radius: $post-border-radius;
+  .icon {
+    cursor: pointer;
+    padding: 0.3rem;
+    border-radius: $post-border-radius;
 
-      &:hover {
-        background-color: $button-highlight-color;
-      }
+    &:hover {
+      background-color: $button-highlight-color;
     }
   }
+
+  .view-replies {
+    width: max-content;
+    display: flex;
+    align-items: center;
+  }
+}
+
+#input-with-buttons {
+  grid-column: 1/3;
 }
