--- a/src/components/Topbar/Topbar.scss
+++ b/src/components/Topbar/Topbar.scss
@@ -305,6 +305,12 @@
     align-items: center;
     gap: 1rem;
 
+    .icon-container {
+      flex-grow: 1;
+      display: flex;
+      justify-content: flex-end;
+    }
+
     .notification-sender {
       width: clamp(130px, 25vw, 250px);
     }
